--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
         "type": "git",
         "url": "git+https://Xiang-Zuo@github.com/Proximify/uniweb-widget-utils.git"
     },
+    "keywords": [
+        "uniweb"
+    ],
     "author": "",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Proximify/uniweb-widget-utils/issues"
     },
     "homepage": "https://github.com/Proximify/uniweb-widget-utils#readme",
-    "dependencies": {
-        "@headlessui/react": "^1.7.3"
-    },
     "devDependencies": {
         "@babel/core": "^7.13.14",
         "@babel/preset-env": "^7.13.12",
@@ -33,8 +33,8 @@
         "sass-loader": "^12.6.0",
         "style-loader": "^2.0.0",
         "webpack": "^5.74.0",
-        "peer-deps-externals-webpack-plugin": "^1.0.4",
-        "webpack-cli": "^4.10.0"
+        "webpack-cli": "^4.10.0",
+        "@headlessui/react": "^1.7.3"
     },
     "peerDependencies": {
         "react": "^18.2.0",
